fix overflow agenda

--- a/client/src/pages/Calendar/Calendar.css
+++ b/client/src/pages/Calendar/Calendar.css
@@ -1,5 +1,5 @@
 #container {
-    background-color: #001933;
+    background-color: #3289a8;
     height: auto;
     width: 100%;
 }
