--- a/client/src/pages/Signup/Signup.css
+++ b/client/src/pages/Signup/Signup.css
@@ -1,5 +1,5 @@
 #container {
-    background-color: #001933;
-    height: 100vh;
+    background-color: #3289a8;
+    height: auto;
     width: 100%;
 }
